java doc and unit tests